--- a/Index.html
+++ b/Index.html
@@ -1,104 +1,89 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Dave's Wood Shop</title>
-		<style>
-	h1{
-  		color: #61d6e2;
- 		font-size: 100px;
-  		text-align: center;
-  background-color: #3a5b3f;
-  height: 200px;
-  font-family: Impact, Charcoal, sans-serif;
-  padding: 20px;
+  <head>
+    <title>Dave's Wood Shop</title>
+    <style>
+body {
+  background-color: #479b69;
 }
-	h2{
+.title1 {
+  font-family: 'Helvetica Neue', sans-serif; font-size: 180px;
+  font-weight: bold;
+  color: #274f72;
+  letter-spacing: -1px; 
+  line-height: 0;
   text-align: center;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
-	h3{
-  text-transform: uppercase;
-  text-align: center;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+.title2 {
+ color: #274f72; 
+ font-family: 'Open Sans', sans-serif;
+ font-size: 30px; 
+ font-weight: 300;
+ padding-top: 10px;
+ padding-bottom: 10px;
+ text-align: center;
+ padding: 40px;
 }
-h4{
-  text-align: center;
-  border: 1px black solid;
-  width: 300px;
-  margin: auto;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-p{
-  color: #e27d61;
-  font-size: 15px;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-a{
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  text-decoration: none;
-}
-
-.blue {
-  color: blue;
-}
-.red {
-  color: red;
-}
-.yellow {
-  color: yellow;
-}
-.green {
-  color: green;
-}
-.purple {
-  color: purple;  
-}
-.center {
-  text-align: center;
-  background-color: pink;
-  width: 280px;
-  margin: auto;
-}
-.quote {
-  background-color: yellow;
-  height: 30px;
-  width: 400px;
-  text-align: center;
-  margin: auto;
-}
-.image {
+.image1 {
   display: block;
   margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 20px;
 }
-
+.product {
+  color: #274f72; 
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif; 
+  font-size: 85px;
+  line-height: 24px; 
+  margin: 0 0 24px; 
+  text-align: center; 
+  text-justify: inter-word;
+}
+.price {
+ color: #274f72; 
+  font-family: "Arial Black", "Arial Bold", Gadget, sans-serif; 
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 34px; 
+  text-align: center; 
+}
+.break {
+  background-color: #274f72;
+  padding: 50px;
+  text-align: center;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 30px;
+}
 </style>
 </head>
 <body>
-<h1 class="blue">Dave's Wood Shop</h1>
-<div class="divvy">
-  <a href="">
-<h2>Bespoke furniture at affordable prices</h2></a>
-</div>
-<div class= "quote">
-<h3>Get a free quote now!</h3>
-  </div>
+<h1 class="title1">Wood Worker</h1>
+    <h2 class="title2">Bespoke furniture at affordable prices</h2>
+      </div>
+<img class="image1" src="http://ceefc02649d25ca315ac-ef93c2ad0985f7464ef79b04e64427fa.r18.cf2.rackcdn.com/home_page/images/24/2_PaintedCabinet_JeffMartinJoinery.jpg"/>
 <br>
-<h4>Email:info@ultimatewood.com</h4>
-
-<p class="red">Dave's wood shop is the place for all your bespoke furniture needs. <em>No Job too big or too small.</em></p>
-<p class="yellow"><strong>Over 30 years experience</strong></p>
-<p class="green">Also a capable furniture restorer and specialising in inlay work and restoration</p>
-
-<p class="purple">See below for example of my work!</p>
-
-<div class= "center">
-  <a href="https://www.google.nl/search?q=bespoke+wood+furniture&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjB-7K-x_LXAhXFJlAKHR_qDtUQ_AUICigB&biw=562&bih=680&dpr=1.25">Bespoke Furniture Examples</a>
-</div>
+<h3 class="product">TV Cabinet</h3>
+<p  class="price">2000:-</p>
 <br>
-<img class= "image" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<h4 class="break">Related Products</h4>
+<img class="image1" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<br>
+<h3 class="product">Handcrafted Table</h3>
+<p  class="price">2000 euros</p>
+<br>
+<img class="image1" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<br>
+<h3 class="product">Handcrafted Table</h3>
+<p  class="price">2000 euros</p>
+<br>
+<img class="image1" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<br>
+<h3 class="product">Handcrafted Table</h3>
+<p  class="price">2000 euros</p>
+<br>
+<h4 class="break">Contact Information</h4>
 </body>
 </html>
-
 
 
 
