--- a/Index.html
+++ b/Index.html
@@ -60,23 +60,23 @@ body {
 <h1 class="title1">Wood Worker</h1>
     <h2 class="title2">Bespoke furniture at affordable prices</h2>
       </div>
-<img class="image1" src="http://ceefc02649d25ca315ac-ef93c2ad0985f7464ef79b04e64427fa.r18.cf2.rackcdn.com/home_page/images/24/2_PaintedCabinet_JeffMartinJoinery.jpg"/>
+<img class="image1" src="http://main.mortonfurniture.com/staging%20files/images/homepage/home-header-1.png
 <br>
 <h3 class="product">TV Cabinet</h3>
 <p  class="price">2000:-</p>
 <br>
 <h4 class="break">Related Products</h4>
-<img class="image1" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<img class="image1" src="http://main.mortonfurniture.com/staging%20files/images/homepage/home-header-1.png"/>
 <br>
 <h3 class="product">Handcrafted Table</h3>
 <p  class="price">2000 euros</p>
 <br>
-<img class="image1" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<img class="image1" src="http://main.mortonfurniture.com/staging%20files/images/homepage/home-header-1.png"/>
 <br>
 <h3 class="product">Handcrafted Table</h3>
 <p  class="price">2000 euros</p>
 <br>
-<img class="image1" src="http://www.simonausten.com/images/product-proportion-1.jpg"/>
+<img class="image1" src="http://main.mortonfurniture.com/staging%20files/images/homepage/home-header-1.png"/>
 <br>
 <h3 class="product">Handcrafted Table</h3>
 <p  class="price">2000 euros</p>
