--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@ body {
 <h1 class="title1">Wood Worker</h1>
     <h2 class="title2">Bespoke furniture at affordable prices</h2>
       </div>
-<img class="image1" src="http://main.mortonfurniture.com/staging%20files/images/homepage/home-header-1.png
+<img class="image1" src="http://main.mortonfurniture.com/staging%20files/images/homepage/home-header-1.png"/>
 <br>
 <h3 class="product">TV Cabinet</h3>
 <p  class="price">2000:-</p>
