--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@ body {
 </head>
 <body>
 <h1 class="title1">Ultimate Wood</h1>
-    <h2 class="title2">Bespoke furniture for everyone</h2>
+    <h2 class="title2"><marquee scrollamount="20">Bespoke furniture for everyone! Call now for a free quote!</marquee></h2>
   
 <img class="image1" src="http://ceefc02649d25ca315ac-ef93c2ad0985f7464ef79b04e64427fa.r18.cf2.rackcdn.com/home_page/images/24/2_PaintedCabinet_JeffMartinJoinery.jpg"/>
 <br>
